# reddit-research

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  brave.py  config.py  db.py  env_loader.py  exa_client.py  headless.py  http_client.py  llm.py  logging_config.py  pyproject.toml  reddit.py  report.py  requirements-dev.txt  requirements.txt  research.py  run.sh  serper_client.py  setup.sh  start.sh  tavily_client.py  tui.py  visualize_trends.py
.github/workflows/: ci.yml
reddit_research/: __init__.py  __main__.py  auto_research.py  config.py  db.py  headless.py  llama_cpp_client.py  llm.py  memory.py  predictor.py  report.py  researcher.py
reddit_research/search/: brave.py  exa.py  reddit.py  serper.py  tavily.py
reddit_research/ui/: app.py  keywords.py  widgets.py
reddit_research/utils/: env_loader.py  http_client.py  logging_config.py  resources.py
scripts/: RESEARCH  backup_db.sh  vacuum_db.sh
tests/: conftest.py  test_brave.py  test_config.py  test_db.py  test_env_loader.py  test_llm.py  test_reddit.py
